--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
         <title>Home</title>
     </head>
     <body>
-        <div class="page">Test</div>
+        <div class="page">
+            <header class="header">
+                <span class="logo">Futurlign</span>
+                <nav class="nav">
+                    <a href="test" class="nav-link">Events</a>
+                    <a href="test" class="nav-link">Information</a>
+                    <a href="test" class="nav-link">Sign Up</a>
+                </nav>
+            </header>
+            <div class="section">
+                <div class="section-one-left"></div>
+                <div class="'section-one-right"></div>
+            </div>
+        </div>
     </body>
 </html>
