section one + two

--- a/index.html
+++ b/index.html
@@ -19,9 +19,23 @@
                     <a href="test" class="nav-link">Sign Up</a>
                 </nav>
             </header>
-            <div class="section">
-                <div class="section-one-left"></div>
-                <div class="'section-one-right"></div>
+            <div class="section section-two">
+                <h1 class="title">Artificial Intelligence is Changing</h1>
+                <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore dignissimos nihil iure tempore qui ratione.</p>
+                <div class="button-container">
+                    <a href="test" class="button">Learn More</a>
+                    <a href="test" class="button-highlighted">Sign Up</a>
+                </div>
+            </div>
+            <div class="section section-one">
+                <div class="section-one-left">
+                    <h2 class="content-header">Aligning the future.</h2>
+                    <p class="content-description">Futurlign is a registered Canadian non-profit based in Calgary striving to promote accessibility and equity regarding AI awareness and its impact on our lives. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolores provident tenetur ut nisi laborum perspiciatis suscipit corrupti, maiores accusamus! Veniam labore harum animi ut accusamus maxime, sunt laborum rem?</p>
+                </div>
+                <div class="section-one-right">
+                    <img src="public/class-image-one.webp" alt="placeholder" class="section-one-image">
+                    <p class="location-text"></p>
+                </div>
             </div>
         </div>
     </body>
