changed navbar paths + added 404 page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <body>
         <div class="page">
             <header class="header">
-                <span class="logo">Futurlign</span>
+                <a href="index.html"><span class="logo">Futurlign</span></a>
                 <nav class="nav">
-                    <a href="test" class="nav-link">Events</a>
-                    <a href="test" class="nav-link">Information</a>
-                    <a href="test" class="nav-link">Sign Up</a>
+                    <a href="events.html" class="nav-link">Events</a>
+                    <a href="organization.html" class="nav-link">Organization</a>
                 </nav>
             </header>
             <div class="section section-two">
