--- a/organization.html
+++ b/organization.html
@@ -7,10 +7,17 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-        <title>Home</title>
+        <title>Organization</title>
     </head>
     <body>
         <div class="page">
+            <header class="header">
+                <a href="index.html"><span class="logo">Futurlign</span></a>
+                <nav class="nav">
+                    <a href="events.html" class="nav-link">Events</a>
+                    <a href="organization.html" class="nav-link">Organization</a>
+                </nav>
+            </header>
         </div>
     </body>
 </html>
