error, events, organization page

--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./404.css">
         <link rel="stylesheet" href="./index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,6 +19,7 @@
                     <a href="organization.html" class="nav-link">Organization</a>
                 </nav>
             </header>
+            <div class="section error-message">You have stumbled upon a page that does not exist! Please try a different url.</div>
         </div>
     </body>
 </html>
