--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="title">Artificial Intelligence is Changing</h1>
                 <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore dignissimos nihil iure tempore qui ratione.</p>
                 <div class="button-container">
-                    <a href="test" class="button">Learn More</a>
+                    <a href="organization.html" class="button">Learn More</a>
                     <a href="test" class="button-highlighted">Sign Up</a>
                 </div>
             </div>
