--- a/organization.html
+++ b/organization.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="./organization.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +19,12 @@
                     <a href="organization.html" class="nav-link">Organization</a>
                 </nav>
             </header>
+            <h2 class="organization-header">Reasons I like Hack Club</h2>
+            <ul class="list">
+                <li class="list-item">Large community with many different interesting people</li>
+                <li class="list-item">Many resources to learn from and opportunities <span>(like scrapyard!)</span> </li>
+                <li class="list-item">Free stuff!</li>
+            </ul>
         </div>
     </body>
 </html>
