variety of misc features

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <nav class="nav">
                     <a href="events.html" class="nav-link">Events</a>
                     <a href="organization.html" class="nav-link">Organization</a>
+                    <a href="https://github.com/Flaryiest/swirl-submission" class="nav-link">Github Repo</a>
                 </nav>
             </header>
             <div class="section section-two">
