--- a/organization.html
+++ b/organization.html
@@ -18,6 +18,7 @@
                 <nav class="nav">
                     <a href="events.html" class="nav-link">Events</a>
                     <a href="organization.html" class="nav-link">Organization</a>
+                    <a href="https://github.com/Flaryiest/swirl-submission" class="nav-link">Github Repo</a>
                 </nav>
             </header>
             <h2 class="organization-header">Reasons I like Hack Club</h2>
@@ -26,6 +27,7 @@
                 <li class="list-item">Many resources to learn from and opportunities <span>(like scrapyard!)</span> </li>
                 <li class="list-item">Free stuff!</li>
             </ul>
+            <p class="email"><a href="mailto:ericmzuo1@gmail.com">Send email to me!</a></p>
         </div>
     </body>
 </html>
